--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-torch>=2.0.0
 transformers>=4.30.0
-accelerate>=0.20.0
-bitsandbytes>=0.39.0
-sentencepiece
-protobuf
-einops
+torch>=2.0.0
+streamlit>=1.12.0
+flask>=2.0.1
+plotly>=5.9.0
+psutil>=5.9.0
+pandas>=1.4.2
+accelerate>=0.20.1
